--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,10 @@
+:root {
+  --primary: #37353E;
+  --secondary: #44444E;
+  --additional: #715A5A;
+  --text: #D3DAD9;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -7,6 +14,7 @@
 
 body {
   font-family: sans-serif;
+  background-color: var(--primary);
 }
 
 /* GLOBAL */
