--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -14,6 +14,8 @@
 
 body {
   font-family: sans-serif;
+  background-color: var(--primary);
+  color: var(--text);
 }
 
 /* GLOBAL */
@@ -23,7 +25,6 @@ body {
   padding-block: 32px;
   padding-inline: 16px;
   margin-inline: auto;
-  background-color: var(--primary);
 }
 
 .card {
