--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -49,7 +49,8 @@ section>.title-section {
 /* Start of Header */
 header {
   background-color: var(--secondary);
-  color: black;
+  
+  color: var(--text);
 }
 
 .app-bar {
