--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -81,6 +81,7 @@ main {
   border-radius: 5px;
   position: sticky;
   top: 10px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
 }
 
 .search-form {
