--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -199,6 +199,11 @@ main {
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.12);
 }
 
+#addNoteBtn .icon {
+  font-size: 18px;
+  font-weight: bold;
+}
+
 /* End of Main */
 
 /* Start of Footer */
